<resources>
    <string name="app_name">NoteVibes</string>
    <string name="password_lock">Password Lock</string>
    <string name="search_password">Search Password</string>
    <string name="password">Password</string>
    <string name="type_description_here">Type description here..</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="password_title">Password Title</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="done">Done</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">Add</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="notes">Notes</string>
    <string name="key">Key</string>
    <string name="typed_description">Description</string>
    <string name="enter_question">Enter Security Question</string>
    <string name="confirm">Confirm</string>
    <string name="enter_question_answer">Answer</string>
    <string name="enter_set_key">Set Key</string>
    <string name="set_key">Set Key</string>
    <string name="change_key">Change Key</string>
    <string name="what_is">What is.. ?</string>
    <string name="answer_question">Answer Question</string>
    <string name="key_title">Change Key</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="delete_note">Delete Password</string>
    <string name="asking_delete_permission_msg">Are you sure you want to delete this note?</string>
    <string name="enter_key">Enter Key</string>
    <string name="password_incorrect">Key is incorrect. try again!</string>
    <string name="ok">Ok</string>
    <string name="incorrect_password">Incorrect Key</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="note_vibes">Note Vibes</string>
    <string name="todo">To Do</string>
    <string name="list">Lists</string>
    <string name="sticky_icon">Sticky Notes</string>
    <string name="lock">Lock Passwords</string>
    <string name="n_o_t_e_y_o_u_r_s_e_l_f">NOTE YOURSELF</string>
</resources>